# doodles

./: .gitignore  LICENSE  Makefile  README.md
bricks/: CHANGELOG.md  README.md  bricksDemos.cabal  hie.yaml
bricks/bhoogle/: Main.hs  README.md
bricks/demos/: AttrDemo.hs  BorderDemo.hs  CacheDemo.hs  CroppingDemo.hs  CustomEventDemo.hs  DialogDemo.hs  DynamicBorderDemo.hs  EditDemo.hs  FileBrowserDemo.hs  FormDemo.hs  GettingStart.hs  HelloWorld.hs  ListDemo.hs  MouseDemo.hs  ProgressBarDemo.hs  README.md  Simple.hs  TableDemo.hs  TabularListDemo.hs  TailDemo.hs
misc/: CHANGELOG.md  LICENSE  hie.yaml  misc.cabal
misc/deprecated/: BChanDemo.hs  CronCsvReader2.hs  CronCsvReader3.hs  CsvRead.hs  CsvRead3.hs  DirCsvReader.hs  README.md  ShowCsvPro.hs  SpawnProc.hs  YamlCsvReader.hs
misc/src/: MiscLib.hs
misc/src/MiscLib/: CronSchema.hs  CsvHelper.hs  CsvHelperPro.hs  DotenvReader.hs
misc/test/: BChanDemo.hs  BChanDemo2.hs  CronCsvReader.hs  CronSearch.hs  CronSearchUtil.hs  CsvRead.hs  CsvRead2.hs  CsvRead2Record.hs  CsvRead3.hs  CsvRead4.hs  CsvRead5.hs  CsvRead6.hs  CsvRead7.hs  CsvRead7Util.hs  DirCsvReader.hs  ListDir.hs  ShowCsv.hs  ShowCsv2.hs  ShowCsvCell.hs  ShowCsvPro.hs  SpawnProc2.hs  SpawnProc3.hs  SysProc.hs  TailIO.hs  TestGPT.hs  Uppercase.hs  YamlCsvReader.hs  YamlReader.hs
ops/: CHANGELOG.md  docker-compose.yml  ghie.sh  hie.yaml  ops.cabal  setup.sh
ops/app/: Main.hs
ops/src/: OpsLib.hs
ops/src/OpsLib/: AfTasks.hs  ListRB.hs  RingBuffer.hs  StateThreadM.hs  ThreadManager.hs  af_task_instance.sql
ops/test/: AfTasks.hs  DisplayerList.hs  Gpt.hs  HasqlDemo.hs  HasqlDemo2.hs  HasqlDemo3.hs  HttpServerDemo.hs  Main.hs  RenderRingBuffer.hs  SwaggerApi.hs  SwaggerDemo.hs  TM.hs  hasql_demo.sql
scripts/: compute  ms.py  rand_print.sh  spawn_proc.py
