cabal-version:   3.0
name:            bricksDemos
version:         0.1.0.0
description:     brick lib study
license:         BSD-3-Clause
license-file:    LICENSE
author:          Jacob
maintainer:      jacobbishopxy@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable hello-world
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   demos
  main-is:          HelloWorld.hs

  -- Brick 应用必须使用 GHC 的 -threaded 选项才能进行编译
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base   ^>=4.17.2.1
    , brick
    , vty

executable getting-start
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   demos
  main-is:          GettingStart.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base   ^>=4.17.2.1
    , brick
    , vty

executable attr-demo
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   demos
  main-is:          AttrDemo.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base   ^>=4.17.2.1
    , brick
    , vty

executable border-demo
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   demos
  main-is:          BorderDemo.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base   ^>=4.17.2.1
    , brick
    , text
    , vty

executable dynamic-border-demo
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   demos
  main-is:          DynamicBorderDemo.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base       ^>=4.17.2.1
    , brick
    , microlens
    , text
    , vty

executable custom-event-demo
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   demos
  main-is:          CustomEventDemo.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base           ^>=4.17.2.1
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , text
    , vty

executable list-demo
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   demos
  main-is:          ListDemo.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base           ^>=4.17.2.1
    , brick
    , microlens
    , microlens-mtl
    , mtl
    , text
    , vector
    , vty

executable edit-demo
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   demos
  main-is:          EditDemo.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base           ^>=4.17.2.1
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , mtl
    , text
    , vector
    , vty

executable table-demo
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   demos
  main-is:          TableDemo.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base   ^>=4.17.2.1
    , brick
    , text
    , vty
