cabal-version:   3.0
name:            misclib
version:         0.1.0.0

-- synopsis:
description:     misc
license:         BSD-3-Clause
license-file:    LICENSE
author:          Jacob
maintainer:      jacobbishopxy@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    MiscLib
    MiscLib.CronSchema
    MiscLib.CsvHelper
    MiscLib.DotenvReader

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , bytestring
    , cassava
    , containers
    , directory
    , dotenv
    , filepath
    , split
    , text
    , unordered-containers
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

executable cron-csv-reader
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CronCsvReader.hs
  build-depends:
    , base
    , misclib
    , text

executable dir-csv-reader
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          DirCsvReader.hs
  build-depends:
    , base
    , bytestring
    , cassava
    , directory
    , filepath
    , text
    , vector

executable yaml-reader
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          YamlReader.hs
  build-depends:
    , aeson
    , base
    , yaml

executable yaml-csv-reader
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          YamlCsvReader.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , cassava
    , directory
    , filepath
    , misclib
    , text
    , yaml

executable show-csv
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          ShowCsv.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  build-depends:
    , base
    , brick
    , bytestring
    , cassava
    , microlens
    , microlens-mtl
    , microlens-th
    , text
    , vector
    , vty
    , vty-crossplatform

executable uppercase
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          Uppercase.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  build-depends:
    , base
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , vty
    , vty-crossplatform

executable show-csv-pro
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          ShowCsvPro.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  build-depends:
    , base
    , brick
    , bytestring
    , cassava
    , microlens
    , microlens-mtl
    , microlens-th
    , text
    , vector
    , vty
    , vty-crossplatform

executable show-csv-cell
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          ShowCsvCell.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  build-depends:
    , base
    , brick
    , bytestring
    , cassava
    , microlens
    , microlens-mtl
    , microlens-th
    , mtl
    , vector
    , vty
    , vty-crossplatform

executable csv-read
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CsvRead.hs
  build-depends:
    , base
    , bytestring
    , text

executable cron-csv-reader3
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CronCsvReader3.hs
  build-depends:
    , base
    , bytestring

executable cron-csv-reader2
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CronCsvReader2.hs
  build-depends:
    , base
    , bytestring
    , text
    , text-icu

executable show-csv2
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          ShowCsv2.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  build-depends:
    , base
    , misclib

executable cron-search
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CronSearch.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  other-modules:    CronSearchUtil
  build-depends:
    , aeson
    , base
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , misclib
    , mtl
    , text
    , vector
    , vty
    , vty-crossplatform
    , yaml

executable csv-read2
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CsvRead2.hs
  build-depends:
    , base
    , bytestring
    , cassava
    , text
    , vector

executable csv-read3
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CsvRead3.hs
  build-depends:
    , base
    , bytestring
    , cassava
    , text
    , text-icu
    , vector

executable csv-read4
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CsvRead4.hs
  build-depends:
    , base
    , bytestring
    , hw-dsv
    , text
    , unordered-containers
    , vector

executable csv-read5
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CsvRead5.hs
  build-depends:
    , base
    , bytestring
    , hw-dsv
    , text
    , unordered-containers
    , vector

executable csv-read6
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CsvRead6.hs
  build-depends:
    , array
    , attoparsec
    , base
    , bytestring
    , containers
    , parsec
    , text
    , vector

executable csv-read7
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CsvRead7.hs
  other-modules:    CsvRead7Util
  build-depends:
    , attoparsec
    , base
    , bytestring
    , text
    , unordered-containers
    , vector
