cabal-version:   3.0
name:            misclib
version:         0.1.0.0

-- synopsis:
description:     misc
license:         BSD-3-Clause
license-file:    LICENSE
author:          Jacob
maintainer:      jacobbishopxy@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    MiscLib
    MiscLib.CronSchema
    MiscLib.CsvHelper
    MiscLib.DotenvReader

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , bytestring
    , cassava
    , containers
    , directory
    , dotenv
    , filepath
    , split
    , text
    , unordered-containers
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

executable yaml-reader
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          YamlReader.hs
  build-depends:
    , aeson
    , base
    , yaml

executable uppercase
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          Uppercase.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  build-depends:
    , base
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , vty
    , vty-crossplatform

executable show-csv-cell
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          ShowCsvCell.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  build-depends:
    , base
    , brick
    , bytestring
    , cassava
    , microlens
    , microlens-mtl
    , microlens-th
    , mtl
    , vector
    , vty
    , vty-crossplatform

executable cron-search
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CronSearch.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  other-modules:    CronSearchUtil
  build-depends:
    , aeson
    , base
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , misclib
    , mtl
    , text
    , vector
    , vty
    , vty-crossplatform
    , yaml

executable csv-read6
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CsvRead6.hs
  build-depends:
    , array
    , attoparsec
    , base
    , bytestring
    , parsec
    , text
    , vector

executable csv-read7
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          CsvRead7.hs
  other-modules:    CsvRead7Util
  build-depends:
    , attoparsec
    , base
    , bytestring
    , text
    , unordered-containers
    , vector

executable spawn-proc2
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          SpawnProc2.hs
  build-depends:
    , base
    , bytestring
    , process
    , unix

executable sys-proc
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          SysProc.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  build-depends:
    , base
    , brick
    , bytestring
    , microlens
    , microlens-mtl
    , microlens-th
    , process
    , text
    , vty
    , vty-crossplatform

executable list-dir
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          ListDir.hs
  ghc-options:      -threaded -Wall -Wcompat -O2
  build-depends:
    , base
    , brick
    , bytestring
    , microlens
    , microlens-mtl
    , microlens-th
    , process
    , text
    , vty
    , vty-crossplatform

executable spawn-proc3
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          SpawnProc3.hs
  build-depends:
    , base
    , process

executable bchan-demo2
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   test
  ghc-options:      -threaded -Wall -Wcompat -O2
  main-is:          BChanDemo2.hs
  build-depends:
    , base
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , process
    , vty
    , vty-crossplatform
