cabal-version:   3.0
name:            ops
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          jacob
maintainer:      jacobbishopxy@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    OpsLib
    OpsLib.RingBuffer
    OpsLib.StateThreadM
    OpsLib.ThreadManager

  build-depends:
    , base        ^>=4.19.1.0
    , containers
    , mtl
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

executable ops
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base  ^>=4.19.1.0
    , ops

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite test-displayer-list
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  ghc-options:      -threaded -Wall -Wcompat -O2
  main-is:          DisplayerList.hs
  build-depends:
    , base
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , ops
    , process
    , vector
    , vty
    , vty-crossplatform

test-suite test-gpt
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Gpt.hs
  build-depends:
    , base
    , ops

test-suite test-render-rb
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  ghc-options:      -threaded -Wall -Wcompat -O2
  main-is:          RenderRingBuffer.hs
  build-depends:
    , base
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , ops
    , process
    , vector
    , vty
    , vty-crossplatform

test-suite test-thread-manager
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  ghc-options:      -threaded -Wall -Wcompat -O2
  main-is:          TM.hs
  build-depends:
    , base
    , ops

executable test-hasql-demo
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          HasqlDemo.hs
  build-depends:
    , base
    , hasql

executable test-hasql-demo2
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          HasqlDemo2.hs
  build-depends:
    , base
    , bytestring
    , contravariant-extras
    , hasql
    , hasql-transaction
    , text
    , vector

executable test-hasql-demo3
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          HasqlDemo3.hs
  build-depends:
    , async
    , base
    , bytestring
    , contravariant-extras
    , hasql
    , hasql-th
    , hasql-transaction
    , scientific
    , text
    , vector
